--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="row align-items-center">
                     <div class="col">
                         <div class="card">
-                            <img src="./img/GORRA.webp" class="card-img-top" alt="pc-escritorio">
+                            <img src="./img/GORRA.webp" class="card-img-top" alt="gorra">
                             <div class="card-body">
                                 <h2 class="card-title">Gorras</h2>
                                 <a href="./pages/productos.html#gorras" class="btn btn-primary">Ver más</a>
@@ -99,7 +99,7 @@
                     </div>
                     <div class="col">
                         <div class="card">
-                            <img src="./img/remera.jpg" class="card-img-top" alt="accesorios-pc">
+                            <img src="./img/remera.jpg" class="card-img-top" alt="remera ">
                             <div class="card-body">
                                 <h2 class="card-title">Remeras</h2>
                                 <a href="./pages/productos.html#Remeras" class="btn btn-primary">Ver más </a>
