--- a/pages/productos.html
+++ b/pages/productos.html
@@ -64,7 +64,7 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#remera">Accesorios para PC</a></li>
+                                    <li><a class="dropdown-item" href="#remera">Remera</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
