--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="row align-items-center">
                     <div class="col">
                         <div class="card">
-                            <img src="./img/GORRA.webp" class="card-img-top" alt="gorra">
+                            <img src="./img/GORRA.webp" class="card-img-top" alt="gorra nike blanca">
                             <div class="card-body">
                                 <h2 class="card-title">Gorras</h2>
                                 <a href="./pages/productos.html#gorras" class="btn btn-primary">Ver más</a>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="col">
                         <div class="card">
-                            <img src="./img/short.webp" class="card-img-top" alt="Short">
+                            <img src="./img/short.webp" class="card-img-top" alt="Short deportivo negro">
                             <div class="card-body">
                                 <h2 class="card-title">Shorts</h2>
                                 <a href="./pages/productos.html#Short" class="btn btn-primary"> Ver más </a>
@@ -99,7 +99,7 @@
                     </div>
                     <div class="col">
                         <div class="card">
-                            <img src="./img/remera.jpg" class="card-img-top" alt="remera ">
+                            <img src="./img/remera.jpg" class="card-img-top" alt="remera corta negra">
                             <div class="card-body">
                                 <h2 class="card-title">Remeras</h2>
                                 <a href="./pages/productos.html#Remeras" class="btn btn-primary">Ver más </a>
