--- a/pages/iniciosesion.html
+++ b/pages/iniciosesion.html
@@ -56,7 +56,7 @@
                                 <a class="nav-link" aria-current="page" href="../pages/productos.html">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/iniciosesion.html">Inicio de sesión</a>
+                                <a class="nav-link" href="../pages/iniciosesion.html">Inicio de sesión</a>
                             </li>
                         </ul>
                     </div>
