arreglo de colores

--- a/pages/iniciosesion.html
+++ b/pages/iniciosesion.html
@@ -66,7 +66,7 @@
     </header>
     <main class="main-iniciosesion">
         <div class="box" id="box">
-            <form action=" " method="post" class="bg-dark" autocomplete="on">
+            <form action=" " method="post" autocomplete="on">
                 <fieldset>
                     <p class="p-form">DIBU INDUMENTARIA</p>
                     <h2 class="title-form">Iniciar Sesion</h2>
